# Timer-for-self-use

./: .gitignore  CLAUDE.md  README.md  config.py  flet_build5_decoded.txt  flet_build6_decoded.txt  main.py  mobile_build_entry.py  pyproject.toml  requirements.txt
app/: __init__.py
app/charts/: __init__.py  chart_data.py  chart_factory.py  chart_frame.py
app/database/: __init__.py  connection.py  schema.sql
app/database/repositories/: __init__.py  base_repo.py  category_repo.py  daily_progress_repo.py  daily_reflection_repo.py  entry_repo.py  goal_repo.py  settings_repo.py
app/export/: __init__.py  exporter.py
app/models/: __init__.py  category.py  daily_progress.py  daily_reflection.py  goal.py  stats.py  time_entry.py
app/services/: __init__.py  aggregation.py  ai_insights_service.py  backup_service.py  calendar_service.py  category_service.py  context.py  csv_import_service.py  csv_insights_service.py  daily_progress_service.py  daily_reflection_service.py  dashboard_service.py  entry_service.py  gemini_service.py  goal_service.py  search_service.py  stats_service.py  streak_service.py  timer_service.py
app/ui/: __init__.py  app_window.py  sidebar.py  theme.py
app/ui/views/: __init__.py  base_view.py  calendar_view.py  categories_view.py  dashboard_view.py  entries_view.py  graphs_view.py  home_view.py  insights_view.py  search_view.py  settings_view.py  statistics_view.py  timer_view.py
app/ui/widgets/: __init__.py  category_form.py  confirm_dialog.py  goals_form.py  hero_banner.py  stat_card.py  time_entry_form.py
app/utils/: __init__.py  event_bus.py  time_utils.py  validators.py
assets/theme/: revenge.json
data/: timetracker.db  timetracker.db-shm  timetracker.db-wal
extensions/timetracker_android_widget/: pyproject.toml  setup.py
extensions/timetracker_android_widget/flutter/timetracker_android_widget/: pubspec.yaml
extensions/timetracker_android_widget/flutter/timetracker_android_widget/android/src/main/: AndroidManifest.xml
extensions/timetracker_android_widget/flutter/timetracker_android_widget/android/src/main/kotlin/com/timetracker/widget/: CountdownAlarmReceiver.kt  CountdownAlarmScheduler.kt  TargetWidgetProvider.kt  TaskReminderNotifier.kt  TaskReminderReceiver.kt  TaskReminderScheduler.kt  TaskReminderStore.kt  TimerWidgetStore.kt  TimetrackerAndroidWidgetPlugin.kt
extensions/timetracker_android_widget/flutter/timetracker_android_widget/android/src/main/res/drawable/: target_progress.xml  widget_background.xml  widget_button.xml
extensions/timetracker_android_widget/flutter/timetracker_android_widget/android/src/main/res/layout/: target_widget.xml  timer_widget.xml
extensions/timetracker_android_widget/flutter/timetracker_android_widget/android/src/main/res/xml/: timer_widget_info.xml
extensions/timetracker_android_widget/flutter/timetracker_android_widget/lib/: timetracker_android_widget.dart
extensions/timetracker_android_widget/src/timetracker_android_widget/: __init__.py
extensions/timetracker_android_widget/src/timetracker_android_widget.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mobile/: app_shell.py  main.py  storage.py  theme.py
mobile/screens/: ai_coach_screen.py  calendar_screen.py  categories_screen.py  dashboard_screen.py  entries_screen.py  goals_screen.py  graphs_screen.py  help_screen.py  home_screen.py  insights_screen.py  placeholder_screen.py  search_screen.py  settings_screen.py  statistics_screen.py  timer_screen.py
mobile/services/: __init__.py  android_timer_bridge.py
mobile/widgets/: charts.py  date_navigator.py  fury.py  heatmap.py  hero.py  sheets.py  stat_card.py
tests/: test_ai_insights_service.py  test_countdown_and_csv_import.py  test_csv_insights_service.py  test_exporter.py  test_focus_mode.py  test_gemini_service.py  test_goal_service.py  test_goals_expansion.py  test_help_screen_source.py  test_multimode_tracking.py  test_timer_celebration.py
