[project]
name = "timetracker-mobile"
version = "0.1.3"
description = "Personal Time Tracker & Productivity Dashboard — Android (Flet)"
requires-python = ">=3.10"
dependencies = [
    "flet==0.86.0",
    "flet-charts==0.86.0",
    "flet-video==0.86.0",
]

[tool.flet]
product = "Time Tracker"
org = "com.timetracker"
bundle_id = "com.timetracker.app"
build_number = 4

[tool.flet.app]
module = "mobile_build_entry"
# Flet's build packager bundles the WHOLE directory containing pyproject.toml
# (so app/ stays importable as "app.*" alongside mobile/'s "mobile.*" imports,
# unchanged). These are excluded so the APK never bundles your personal data,
# the desktop-only code, or local build/test cruft.
exclude = [
    "build", "TimeTracker.apk",
    "data", "backups", "exports", "tests",
    ".git", ".github", "__pycache__",
    "flet_build.log", "flet_build2.log", "flet_stdout.log", "flet_stderr.log",
    # mobile/.flet is Flet's own local dev-storage dir (created by desktop
    # `flet run` sessions) — it can hold a mirrored copy of the real database
    # and export files, so it must never end up in a built package.
    "mobile/.flet", ".flet",
]

[tool.flet.android]
min_sdk_version = 24
